add constant to package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "verify",
     "pkcs1",
     "oaep",
-    "pss"
+    "pss",
+    ""constants"
   ],
   "author": "rzcoder",
   "license": "MIT",
